--- a/src/components/Profile/Box/Box.css
+++ b/src/components/Profile/Box/Box.css
@@ -1,9 +1,9 @@
 .box {
-  position: absolute;
+  position: static;
   width: 307px;
   height: 720px;
   left: 0px;
-  top: 0px;
+  top: 70px;
 
   background: #fff573;
   border-radius: 0px 30px 30px 0px;
