--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,9 +3,9 @@
     border-radius: 0px 30px 30px 0px;
 }
 
-img {
+.profile img {
     margin: 20px;
-    padding-top: 150px;
+    /* padding-top: 150px; */
 }
 
 .nameProfile, .profileDetails {
