--- a/src/pages/Regitration/Registration.css
+++ b/src/pages/Regitration/Registration.css
@@ -1,18 +1,20 @@
 .registration {
     display: flex;
+    background-color: white;
 }
 
 .regis-form {
-    padding-top: 2rem;
+    /* padding-top: 0.5rem; */
     width: 50%;
     display: flex;
     justify-content: center;
 }
 
+
 #register-button {
     background-color: #FFF573;
     height: 3rem;
-    margin-top: 50px;
+    margin-top: 2rem;
     cursor: pointer;
 }
 
@@ -25,6 +27,13 @@
     margin: 0.5rem;
     font-size: 1rem;
     padding-left: 10px;
+}
+
+.regis-form span {
+    font-size: 0.8rem;
+    text-align: left;
+    margin: 0;
+    color: mediumslateblue;
 }
 
 #registration-img {
