--- a/src/components/SettingForm/SettingForm.css
+++ b/src/components/SettingForm/SettingForm.css
@@ -50,7 +50,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    border: 1px gray solid;
+    /* border: 1px gray solid; */
     height: 100px;
     width: 100px;
     z-index: 3;
@@ -104,6 +104,16 @@
     margin: 10px;
 }
 
+.setting button {
+    background-color: #FFF573;
+    width: 328px;
+    height: 45px;
+    border-radius: 5px;
+    border: 1px;
+    padding-left: 10px;
+    margin: 10px;
+}
+
 
 .update-goal {
     width: 450px;
@@ -119,9 +129,14 @@
     margin: 10px;
 }
 
+.goal-form label {
+    padding-left: 10px;
+}
+
 .setting a {
     text-align: right;
     margin: 10px;
+    color: blueviolet;
 }
 
 #goal-h2 {
