--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -26,3 +26,28 @@
     display: flex;
     flex-direction: column;
 }
+
+#dashboard-cards-heading img {
+    height: 2rem;
+    padding: 0;
+    margin-right: 0.3rem;
+}
+
+#dashboard-cards-heading {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.header-icon {
+    height: 2rem;
+    padding: 0;
+    margin-right: 0.3rem;
+}
+
+.dashboard-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
