--- a/src/pages/Regitration/Registration.css
+++ b/src/pages/Regitration/Registration.css
@@ -33,7 +33,7 @@
     font-size: 0.8rem;
     text-align: left;
     margin: 0;
-    color: mediumslateblue;
+    color: blueviolet;
 }
 
 #registration-img {
