--- a/src/pages/Home/Footer/Footer.css
+++ b/src/pages/Home/Footer/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: #383B81;
 }
 
 .footer p {
