--- a/src/pages/Home/Info/Info.css
+++ b/src/pages/Home/Info/Info.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: #FFCBD7;
 }
 
 .home-info div {
