--- a/src/pages/Regitration/Registration.css
+++ b/src/pages/Regitration/Registration.css
@@ -1,10 +1,10 @@
 .registration {
     display: flex;
-    background-color: white;
+    background-image: linear-gradient(0deg, rgba(56, 59, 129, 1) 0%, rgba(255, 203, 215, 1) 100%);
 }
 
 .regis-form {
-    /* padding-top: 0.5rem; */
+    padding-top: 0.5rem;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -12,10 +12,11 @@
 
 
 #register-button {
-    background-color: #FFF573;
+    background-color: #EC255A;
     height: 3rem;
     margin-top: 2rem;
     cursor: pointer;
+    color: antiquewhite;
 }
 
 .regis-form input {
@@ -33,13 +34,14 @@
     font-size: 0.8rem;
     text-align: left;
     margin: 0;
-    color: blueviolet;
+    color: rgb(28, 28, 28);
+    font-weight: bold;
 }
 
 #registration-img {
     width: 50%;
     height: 720px;
-    background-color: #FFF573;
+    /* background-color: #FFCBD7; */
     display: flex;
     justify-content: center;
 }
