--- a/src/pages/Regitration/Registration.css
+++ b/src/pages/Regitration/Registration.css
@@ -16,7 +16,7 @@
 
 .regis-form {
     padding-top: 0.5rem;
-    width: 50%;
+    width: 60%;
     display: flex;
     justify-content: center;
 }
@@ -50,16 +50,17 @@
 }
 
 #registration-img {
-    width: 50%;
+    width: 40%;
     height: 720px;
     /* background-color: #FFCBD7; */
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-right: 50px;
 }
 
 #registration-img img {
-    width: 80%;
+    width: 100%;
     height: 70%;
 }
 
