--- a/src/components/Profile/Button/Button.css
+++ b/src/components/Profile/Button/Button.css
@@ -8,7 +8,7 @@ body.active-modal {
     font-size: 18px;
     border: none;
     cursor: pointer;
-    background: #FFF573;
+    background: #ef6081;
 
 }
 .modal, .overlay {
