--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,7 @@
 .profile {
-    background: #FFF573;
+    background: #FFCBD7;
     border-radius: 0px 30px 30px 0px;
+    margin-top: 10px;
 }
 
 .profile img {
