--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,18 @@
+/* * {
+    border: 1px solid red;
+    margin: 0;
+} */
 .card {
     width: 80%;
-    padding: 0.75rem;
+    padding: 0.6rem;
     margin: 2rem auto;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    border-radius: 1.5rem;
+    box-shadow: rgba(0, 0, 0, 0.5) 8px 8px 0px;
+    border-radius: 0.5rem;
     text-align: left;
+    min-height: 10rem;
 }
+
 
 .card .card-head {
     display: flex;
@@ -25,6 +31,7 @@
 
 .card .card-body {
     display: flex;
+    padding: 0;
     margin: 0 0.75rem;
     justify-content: space-between;
     align-items: flex-start;
