--- a/src/components/CartList/CardList.css
+++ b/src/components/CartList/CardList.css
@@ -1,10 +1,10 @@
 .cardlist {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     scrollbar-width: auto;
     scrollbar-color: #c6cfd7 #ffffff;
     width: 100%;
-    height: 80vh;
+    height: 100%;
     margin: auto;
     /* margin-top: 720px; */
     /* background-color: beige; */
