--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -21,7 +21,8 @@ html, body {
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-    background-color: #f5aabb;
+    /* background-color: #f5aabb; */
+    background-color: none;
     
 }
 
