--- a/src/pages/MyActivities/MyActivities.css
+++ b/src/pages/MyActivities/MyActivities.css
@@ -1,7 +1,14 @@
 #myActivities {
     display: flex;
-    min-height: 720px;
-    background-color: white;
+    flex-direction: column;
+    height: 100vh;
+    /* min-height: 720px; */
+    /* background-color: white; */
+    background-image: linear-gradient(0deg, rgba(56, 59, 129, 1) 0%, rgba(255, 203, 215, 1) 100%);
+}
+
+#myActivities > div {
+    display: flex;
 }
 
 #myActivities-cards {
@@ -9,7 +16,7 @@
     height: 100%;
     /* border: 1px red solid; */
     overflow-y: scroll;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     display: flex;
     flex-direction: column;
     scrollbar-color: grey;
