--- a/src/components/CommunityCard/CommunityCard.css
+++ b/src/components/CommunityCard/CommunityCard.css
@@ -1,11 +1,12 @@
 .communityList {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     scrollbar-width: auto;
     scrollbar-color: #c6cfd7 #ffffff;
     width: 100%;
-    height: 80vh;
-    margin: auto;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     /* margin-top: 720px; */
     /* background-color: beige; */
 }
@@ -27,12 +28,17 @@
 
 .communityCard {
     width: 80%;
-    padding: 0.75rem;
+    padding: 0.6rem;
     margin: 2rem auto;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    border-radius: 1.5rem;
+    box-shadow: rgba(0, 0, 0, 0.5) 8px 8px 0px;
+    border-radius: 0.5rem;
     text-align: left;
+    min-height: 10rem;
+}
+
+.card-head > p {
+    margin: 5px;
 }
 
 .communityCard .card-head {
@@ -52,6 +58,7 @@
 
 .communityCard .card-body {
     display: flex;
+    padding: 0;
     margin: 0 0.75rem;
     justify-content: space-between;
     align-items: flex-start;
@@ -61,10 +68,19 @@
     width: 30%;
 }
 
+.card-detail > p {
+    margin: 5px;
+}
+
+.card-text > p {
+    margin: 5px;
+}
+
 .communityCard .card-body .card-text {
     width: 65%;
 }
 
 .communityCard .card-body img {
     margin-right: 20px;
+    height: 7rem;
 }
