--- a/src/pages/Community/Community.css
+++ b/src/pages/Community/Community.css
@@ -1,5 +1,14 @@
 #community {
     display: flex;
+    flex-direction: column;
+    height: 100vh;
+    /* min-height: 720px; */
+    /* background-color: white; */
+    background-image: linear-gradient(0deg, rgba(56, 59, 129, 1) 0%, rgba(255, 203, 215, 1) 100%);
+}
+
+#community>div {
+    display: flex;
 }
 
 #community-cards {
@@ -7,7 +16,7 @@
     height: 100%;
     /* border: 1px red solid; */
     overflow-y: scroll;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     display: flex;
     flex-direction: column;
     scrollbar-color: grey;
