edit navBar and some styling

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,5 +1,10 @@
 #dashboard {
     display: flex;
+    flex-direction: column;
+}
+
+#dashboard>div {
+    display: flex;
 }
 
 .dashboard-summary {
