--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,15 @@ a {
 a:hover {
   color: #535bf2;
 }
-
-body {
+*/
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
+} */
+/*
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -67,8 +67,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-} */
+}  */
 
 body {
   background-color: #383B81;
+  padding: 0;
 }
