--- a/src/pages/Home/Tips/Tips.css
+++ b/src/pages/Home/Tips/Tips.css
@@ -1,8 +1,8 @@
 .tips {
     display: flex;
     justify-content: center;
-    background-color: #797df5;
-    /* background-color: #2b2d65; */
+    /* background-color: #797df5; */
+    background-color: #2b2d65;
     margin: 0;
     width: 100%;
     color: antiquewhite;
