--- a/src/components/Profile/Box/Box.css
+++ b/src/components/Profile/Box/Box.css
@@ -5,6 +5,8 @@
   left: 0px;
   top: 70px;
 
+  border: 2px solid black;
+
   background-color: #ef6081;
-  border-radius: 0px 30px 30px 0px;
+  /* border-radius: 0px 30px 30px 0px; */
 }
