--- a/src/components/CartList/CardList.css
+++ b/src/components/CartList/CardList.css
@@ -1,8 +1,8 @@
 .cardlist {
     overflow-x: hidden;
     overflow-y: hidden;
-    scrollbar-width: auto;
-    scrollbar-color: #c6cfd7 #ffffff;
+    /* scrollbar-width: auto; */
+    /* scrollbar-color: #c6cfd7 #ffffff; */
     width: 100%;
     height: 100%;
     margin: auto;
