--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -26,7 +26,7 @@
     max-width: 1000px;
     max-height: 350px;
     /* border: 1px red solid; */
-    overflow: scroll;
+    /* overflow: scroll; */
     margin-top: 20px;
     display: flex;
     flex-direction: column;
