--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,7 @@
 .profile {
     background: #FFCBD7;
     border-radius: 0px 30px 30px 0px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
 
 .profile img {
