--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -23,12 +23,12 @@ html, body {
     padding: 0 2rem;
     /* background-color: #f5aabb; */
 
-    /* background-color: none; */
+    background-color: none;
 
-    background-color: white !important;
+    /* background-color: white !important; */
 
 
-    border: 2px black solid;
+    /* border: 2px black solid; */
     
 }
 
