--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,6 +1,7 @@
 #dashboard {
     display: flex;
     flex-direction: column;
+    background-image: linear-gradient(0deg, rgba(56, 59, 129, 1) 0%, rgba(255, 203, 215, 1) 100%);
 }
 
 #dashboard>div {
