--- a/src/components/Goal/Goal.css
+++ b/src/components/Goal/Goal.css
@@ -22,6 +22,7 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     margin: 0px 0px 10px 0px;
     /* height: 100px; */
+    background-color: white;
 }
 
 .goal-container div {
