--- a/src/components/UpdateActivityForm/UpdateActivityForm.css
+++ b/src/components/UpdateActivityForm/UpdateActivityForm.css
@@ -50,7 +50,7 @@ body.active-modal {
   position: absolute;
   top: 40%;
   left: 50%;
-  /* transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%);
   line-height: 1.4;
   background: #FFFFFF;
   padding: 14px 28px;
