--- a/src/components/BMI/BMI.css
+++ b/src/components/BMI/BMI.css
@@ -1,11 +1,14 @@
 .bmi {
     /* border: 1px solid lightgray; */
-    border-radius: 5px;
+    /* border-radius: 20px; */
     /* box-shadow: 5px 5px 10px lightgrey; */
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    background-color: white;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
     width: 265px;
     padding: 20px 0;
+    background-color: white;
+
+    box-shadow: rgba(0, 0, 0, 0.5) 8px 8px 0px;
+    border-radius: 0.5rem;
 }
 
 .bmi h3 {
