--- a/src/components/CartList/CardList.css
+++ b/src/components/CartList/CardList.css
@@ -1,8 +1,8 @@
 .cardlist {
     overflow-x: hidden;
     overflow-y: hidden;
-    /* scrollbar-width: auto; */
-    /* scrollbar-color: #c6cfd7 #ffffff; */
+    /* scrollbar-width: auto;
+    scrollbar-color: #c6cfd7 #ffffff; */
     width: 100%;
     height: 100%;
     margin: auto;
@@ -12,14 +12,17 @@
 
   /* Chrome, Edge, and Safari */
 .cardlist::-webkit-scrollbar {
+    display: none;
     width: 16px;
 }
 
 .cardlist::-webkit-scrollbar-track {
+    display: none;
     background: #ffffff;
 }
 
 .cardlist::-webkit-scrollbar-thumb {
+    display: none;
     background-color: #c6cfd7;
     border-radius: 10px;
     border: 3px solid #ffffff;
