--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,6 +1,7 @@
 #dashboard {
     display: flex;
     flex-direction: column;
+    height: 100vh;
     background-image: linear-gradient(0deg, rgba(56, 59, 129, 1) 0%, rgba(255, 203, 215, 1) 100%);
 }
 
@@ -56,4 +57,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+#seemore {
+    color:rgba(255, 203, 215, 1);
+    text-decoration-color: none;
 }
